--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
         "@element-plus/icons-vue": "^2.1.0",
         "axios": "^1.4.0",
         "crypto-js": "^4.1.1",
+        "echarts": "^5.4.2",
         "element-plus": "^2.3.5",
         "less": "^4.1.3",
         "vue": "^3.3.2",
+        "vue-echarts": "^6.5.5",
         "vue-router": "^4.2.0",
         "vue3-cookies": "^1.0.6",
         "vue3-puzzle-vcode": "^1.0.12"
